--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "scripts": {
       "start": "node local.js"
     },
+    "bin": {
+      "slab-mcp-server": "./index.js"
+    },  
     "dependencies": {
       "@modelcontextprotocol/sdk": "^0.5.0"
     },
