--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "MCP server for Slab integration",
     "main": "index.js",
     "scripts": {
-      "start": "node local.js"
+      "start": "node api.js"
     },
     "bin": {
       "slab-mcp-server": "./index.js"
